Load apps dynamicly

--- a/json/apps.json
+++ b/json/apps.json
@@ -1,7 +1,9 @@
 {
 	"tmdbpp": {
+		"width": "12",
 		"name": "Movie Db Popular People",
 		"icon": "img/icons/tmbd.svg",
+		"description": "Displaying a list of popular people (actors, directors ..etc) from the movie db site API...",
 		"details": "<p>Displaying a list of popular people (actors, directors ..etc) from the movie db site API.</p><p>Displaying the details of person on selecting him/her with the ability of displaying and downloading profile images in full size.</p>",
 		"lang": "Swift",
 		"android": "",
@@ -14,8 +16,10 @@
 		]
 	},
 	"studentPortal": {
+		"width": "6",
 		"name": "Student Portal",
 		"icon": "img/icons/student-portal.png",
+		"description": "Student portal for universities working with \"Ibn Al-Haitham\" student information system...",
 		"details": "<p>Student portal for universities working with \"Ibn Al-Haitham\" student information system.</p><p>Displaying student data, study timetables, exam timetables and results.</p><p>Displaying list of restaurants inside university and menus of each restaurant.</p><p>Notifying student about announced results through push notifications.</p>",
 		"lang": "Java for Android - Swift for iOS",
 		"android": "https://play.google.com/store/apps/details?id=eg.edu.mans.mustudentportal",
@@ -34,8 +38,10 @@
 		]
 	},
 	"patientReservation": {
+		"width": "6",
 		"name": "Ibn Sina Patient Reservation",
 		"icon": "img/icons/ibn-sina-reservation.png",
+		"description": "Patient reservation system based on \"Ibn Sina\" hospitals system...",
 		"details": "<p>Patient reservation system based on \"Ibn Sina\" hospitals system.</p><p>Patients can reserve appointment date through the application.</p>",
 		"lang": "Java",
 		"android": "",
@@ -46,8 +52,10 @@
 		]
 	},
 	"ftapp": {
+		"width": "6",
 		"name": "FT App",
 		"icon": "img/icons/ft-app.png",
+		"description": "Displaying a list of request with voice and images...",
 		"details": "<p>Displaying a list of request with voice and images.</p><p>Displaying list of requests with images included in details and voice.</p><p>User can zoom images in details in and out.</p><p>User can listen to voice response and record and send one.</p>",
 		"lang": "Java",
 		"android": "",
@@ -59,8 +67,10 @@
 		]
 	},
 	"ibnalhaithamAcademic": {
+		"width": "6",
 		"name": "Ibn Al-Haitham Academic",
 		"icon": "img/icons/ibn-alhaitham-academic.png",
+		"description": "Ibn Al-Haitham student information system for academic year...",
 		"details": "<p>Ibn Al-Haitham student information system for academic year.</p><p>Displaying student data and latest result.</p><p>Notifying student about announced results through push notifications.</p>",
 		"lang": "Java for Android - Swift for iOS",
 		"android": "https://play.google.com/store/apps/details?id=eg.edu.mans.stda.ibnal_haitham",
@@ -75,8 +85,10 @@
 		]
 	},
 	"ibnalhaithamPost": {
+		"width": "6",
 		"name": "Ibn Al-Haitham Post Graduate",
 		"icon": "img/icons/ibn-alhaitham-post.png",
+		"description": "Ibn Al-Haitham for post graduate students...",
 		"details": "<p>Ibn Al-Haitham for post graduate students.</p><p>Apply for post graduate through creating an account and filling the required data.</p><p>Get push notification when you accepted.</p><p>After being accepted you can login as student and view your data.</p><p>Register your academic courses when registration is open.</p>",
 		"lang": "Java for Android - Swift for iOS",
 		"android": "https://play.google.com/store/apps/details?id=eg.edu.mans.pgs.ibnal_haytham",
@@ -99,8 +111,10 @@
 		]
 	},
 	"munews": {
+		"width": "6",
 		"name": "Mansoura University News",
 		"icon": "img/icons/mu-news.png",
+		"description": "Mansoura University news feed...",
 		"details": "<p>Mansoura University news feed.</p><p>Display a list of the latest news.</p><p>Displaying the details of the news.</p>",
 		"lang": "Cordova",
 		"android": "https://play.google.com/store/apps/details?id=eg.edu.mans.news",
@@ -113,8 +127,10 @@
 		]
 	},
 	"ibnalhaithamCredit": {
+		"width": "6",
 		"name": "Ibn Al-Haitham Credit",
 		"icon": "img/icons/student-portal.png",
+		"description": "Ibn Al-Haitham student information system for credit hours...",
 		"details": "<p>Ibn Al-Haitham student information system for credit hours.</p><p>Displaying student data, study timetables, exam timetables and results.</p><p>Notifying student about announced results through push notifications.</p>",
 		"lang": "Cordova",
 		"android": "https://play.google.com/store/apps/details?id=eg.edu.mans.credit",
@@ -129,8 +145,10 @@
 		]
 	},
 	"future": {
+		"width": "6",
 		"name": "Future Library",
 		"icon": "img/icons/fl.png",
+		"description": "Future library system...",
 		"details": "<p>Future library system.</p><p>Search books and theses.</p>",
 		"lang": "Java for Android - Cordova for iOS",
 		"android": "https://play.google.com/store/apps/details?id=eg.edu.eulc.futurelibrary",
@@ -150,8 +168,10 @@
 		]
 	},
 	"wdip": {
+		"width": "6",
 		"name": "Where did I Park",
 		"icon": "img/icons/wdip.png",
+		"description": "Save the place you parked your car at...",
 		"details": "<p>Save the place you parked your car at.</p><p>Add landmark to your location.</p><p>Get directions to your car.</p>",
 		"lang": "Java",
 		"android": "https://play.google.com/store/apps/details?id=elmeniawy.eslam.wdip",
@@ -164,8 +184,10 @@
 		]
 	},
 	"yts": {
+		"width": "6",
 		"name": "YTS.AG",
 		"icon": "img/icons/yts.svg",
+		"description": "Display list of latest movies...",
 		"details": "<p>Display list of latest movies.</p><p>Search for the movie you want.</p><p>View details of movie including torrent links to download movie.</p>",
 		"lang": "Java",
 		"android": "https://github.com/EslamElMeniawy/AndroidJSONReader/blob/master/app/app-release.apk",
