Change alwafd id

--- a/json/apps.json
+++ b/json/apps.json
@@ -302,7 +302,7 @@
 			"img/screens/yts/3.png"
 		]
 	},
-	"yts": {
+	"wafd": {
 		"width": "6",
 		"name": "AlWafd",
 		"icon": "img/icons/wafd.png",
