Add twitter images

--- a/json/apps.json
+++ b/json/apps.json
@@ -10,8 +10,8 @@
 		"ios": "",
 		"source": "",
 		"screens": [
-			"img/screens/twitter/1.jpg",
-			"img/screens/twitter/2.jpg"
+			"img/screens/twitter/1.png",
+			"img/screens/twitter/2.png"
 		]
 	},
 	"famous": {
