Add twitter app code

--- a/json/apps.json
+++ b/json/apps.json
@@ -8,7 +8,7 @@
 		"lang": "Java",
 		"android": "",
 		"ios": "",
-		"source": "",
+		"source": "https://github.com/EslamElMeniawy/TwitterFollowers",
 		"screens": [
 			"img/screens/twitter/1.png",
 			"img/screens/twitter/2.png"
